--- a/SATapp/app/src/main/res/values/strings.xml
+++ b/SATapp/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+    <string name="save">Guardar</string>
+    <string name="button_cancelar">Cancelar</string>
+    <string name="hint_name">Nombre</string>
+    <string name="hint_descripcion">Descripción</string>
 </resources>
