Layout completo, falta completar el activity, en concreto los métodos para obtener los técnicos y los dispositivos, mostrar error si un campo requerido está vacío

--- a/SATapp/app/src/main/res/values/strings.xml
+++ b/SATapp/app/src/main/res/values/strings.xml
@@ -18,4 +18,9 @@
     <string name="CreatedBy">Creado por:</string>
     <string name="state">Estado de la incidencia</string>
     <string name="assign">Asignar técnico</string>
+    <string name="createTicket">Nuevo Ticket</string>
+    <string name="load">Subir imágenes</string>
+    <string name="title">Título</string>
+    <string name="selectDevice">Selecciona el dispositivo</string>
+    <string name="selectTech">Selecciona un técnico</string>
 </resources>
