--- a/SATapp/app/src/main/res/values/strings.xml
+++ b/SATapp/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="title">Título</string>
     <string name="selectDevice">Selecciona el dispositivo</string>
     <string name="selectTech">Selecciona un técnico</string>
+    <string name="save">Guardar</string>
 </resources>
