parece ser que hay un error en la api a la hora de asignar un tecnico

--- a/SATapp/app/src/main/res/values/strings.xml
+++ b/SATapp/app/src/main/res/values/strings.xml
@@ -24,4 +24,6 @@
     <string name="selectDevice">Selecciona el dispositivo</string>
     <string name="selectTech">Selecciona un técnico</string>
     <string name="save">Guardar</string>
+    <string name="device">Dispositivo</string>
+    <string name="tech">Técnico</string>
 </resources>
