busqueda por texto

--- a/SATapp/app/src/main/res/values/strings.xml
+++ b/SATapp/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="selectDevice">Selecciona el dispositivo</string>
     <string name="selectTech">Selecciona un técnico</string>
     <string name="save">Guardar</string>
+    <string name="action_search">search</string>
 </resources>
