lista de usuario hecha

--- a/SATapp/app/src/main/res/values/strings.xml
+++ b/SATapp/app/src/main/res/values/strings.xml
@@ -29,4 +29,6 @@
     <string name="devices">Dispositivos</string>
     <string name="tickets">Incidencias</string>
     <string name="users">Usuarios</string>
+    <string name="validated">Validado:</string>
+    <string name="rol">Rol:</string>
 </resources>
