cambios para mejora, asignar ticket a tecnico y cambiar estado al asignar hecho, cambia la información de forma dinámica

--- a/SATapp/app/src/main/res/values/strings.xml
+++ b/SATapp/app/src/main/res/values/strings.xml
@@ -41,4 +41,5 @@
     <string name="state_user">Estado:</string>
     <string name="fullname">Nombre:</string>
     <string name="email">Email:</string>
+    <string name="create_anotation">Crear anotación</string>
 </resources>
